[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/HighScoreMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/MenuTheme.tres" type="Theme" id=2]

[node name="HighScoreMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -5.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 44.0
margin_top = 42.0
margin_right = 96.0
margin_bottom = 87.0

[node name="TextEdit" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 52.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
align = 3
valign = 1

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 52.1505
margin_bottom = 45.6232
text = "Main menu"

[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
